Update az-cd-pipeline.yml for Azure Pipelines

--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -150,7 +150,7 @@ stages:
                 downloadPath: '$(System.ArtifactsDirectory)'
                 
             - task: AzureRmWebAppDeployment@4
-              displayName: 'Deploy Azure App Service'
+              displayName: 'Deploy core App Service'
               inputs:
                 azureSubscription: '$(azureSub)'
                 appType: 'webAppLinux'
