--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -42,3 +42,8 @@ messaging.rabbit.email.topic=email-topic-exchange
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
+# Cache
+spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
+#Cloud Storage
+bucketName=${BUCKET_NAME}
+staticUrl=${STATIC_URL}
