added separete endpoint for profile picture, moved default picture in proprties file

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -53,3 +53,6 @@ spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
 #Cloud Storage
 bucketName=${BUCKET_NAME}
 staticUrl=${STATIC_URL}
+
+# Default profile picture for user
+defaultProfilePicture=https://storage.cloud.google.com/staging.greencity-c5a3a.appspot.com"/d333665a-9269-49ef-bc77-2d8d4090290f
