--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -48,8 +48,7 @@ messaging.rabbit.email.topic=email-topic-exchange
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
+
 # Cache
 spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
-#Cloud Storage
-bucketName=${BUCKET_NAME}
-staticUrl=${STATIC_URL}
+storage.localhost.url=${STORAGE_LOCAL_HOST}
