Added dependecies, app.properties, error message and ch security config

--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -53,3 +53,6 @@ spring.cache.caffeine.spec=${CACHE_SPEC}
 #Cloud Storage
 bucketName=${BUCKET_NAME}
 staticUrl=${STATIC_URL}
+# Facebook
+spring.social.facebook.app-id=${FACEBOOK_APP_ID}
+spring.social.facebook.app-secret=${FACEBOOK_APP-SECRET}
