--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,6 +25,8 @@
         <swagger.version>2.9.2</swagger.version>
         <cloudstorage.version>1.105.0</cloudstorage.version>
         <tngtech.version>1.13.1</tngtech.version>
+        <facebook.version>2.0.3.RELEASE</facebook.version>
+        <socialcore.version>1.1.6.RELEASE</socialcore.version>
     </properties>
 
     <dependencies>
@@ -177,6 +179,16 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-core</artifactId>
+            <version>${socialcore.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-facebook</artifactId>
+            <version>${facebook.version}</version>
         </dependency>
 
 
