moved default profile picture in properties file

--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -53,3 +53,6 @@ spring.cache.caffeine.spec=${CACHE_SPEC}
 #Cloud Storage
 bucketName=${BUCKET_NAME}
 staticUrl=${STATIC_URL}
+
+# Default profile picture for user
+defaultProfilePicture=${DEFAULT_PROFILE_PICTURE}
