--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -53,3 +53,6 @@ spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
 #Cloud Storage
 bucketName=${BUCKET_NAME}
 staticUrl=${STATIC_URL}
+
+# Default profile picture for user
+defaultProfilePicture=${DEFAULT_PROFILE_PICTURE}
