--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -47,3 +47,5 @@ spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
 #Cloud Storage
 bucketName=${BUCKET_NAME}
 staticUrl=${STATIC_URL}
+# Default profile picture for user
+defaultProfilePicture=${DEFAULT_PROFILE_PICTURE}
