Refactored cfg and prop-related files

--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -59,4 +59,4 @@ defaultProfilePicture=${DEFAULT_PROFILE_PICTURE}
 
 # Facebook
 spring.social.facebook.app-id=${FACEBOOK_APP_ID}
-spring.social.facebook.app-secret=${FACEBOOK_APP-SECRET}
+spring.social.facebook.app-secret=${FACEBOOK_APP_SECRET}
