--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -49,3 +49,6 @@ bucketName=${BUCKET_NAME}
 staticUrl=${STATIC_URL}
 # Default profile picture for user
 defaultProfilePicture=${DEFAULT_PROFILE_PICTURE}
+# Facebook
+spring.social.facebook.app-id=${FACEBOOK_APP_ID}
+spring.social.facebook.app-secret=${FACEBOOK_APP_SECRET}
