--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -58,4 +58,4 @@ staticUrl=${STATIC_URL}
 defaultProfilePicture=${DEFAULT_PROFILE_PICTURE}
 # Facebook
 spring.social.facebook.app-id=${FACEBOOK_APP_ID}
-spring.social.facebook.app-secret=${FACEBOOK_APP-SECRET}
+spring.social.facebook.app-secret=${FACEBOOK_APP_SECRET}
