--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -53,9 +53,12 @@ spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
 #Cloud Storage
 bucketName=${BUCKET_NAME}
 staticUrl=${STATIC_URL}
-
 # Default profile picture for user
 defaultProfilePicture=${DEFAULT_PROFILE_PICTURE}
 # Facebook
 spring.social.facebook.app-id=${FACEBOOK_APP_ID}
 spring.social.facebook.app-secret=${FACEBOOK_APP_SECRET}
+# File upload limit
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.tomcat.max-http-post-size=10MB
