--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -52,3 +52,7 @@ defaultProfilePicture=${DEFAULT_PROFILE_PICTURE}
 # Facebook
 spring.social.facebook.app-id=${FACEBOOK_APP_ID}
 spring.social.facebook.app-secret=${FACEBOOK_APP_SECRET}
+# File upload limit
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.tomcat.max-http-post-size=10MB
