configured Spring to enable WebSocket and added new API

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -190,7 +190,10 @@
             <artifactId>spring-social-facebook</artifactId>
             <version>${facebook.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
     </dependencies>
 
