--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,7 +16,9 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <junit-jupiter.version>5.3.2</junit-jupiter.version>
+        <junit-jupiter.version>5.4.2</junit-jupiter.version>
+        <mockito-junit-jupiter.version>3.3.3</mockito-junit-jupiter.version>
+        <mockito-core.version>3.3.3</mockito-core.version>
         <modelmapper.version>2.3.5</modelmapper.version>
         <caffeine.version>2.8.1</caffeine.version>
         <liquibase.version>3.8.4</liquibase.version>
@@ -118,7 +120,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>3.2.4</version>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
