--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -62,3 +62,5 @@ spring.social.facebook.app-secret=${FACEBOOK_APP_SECRET}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 server.tomcat.max-http-post-size=10MB
+# Time after a user last activity time to check if a user is online
+greencity.time.after.last.activity=300000
