Added Thymeleaf. Added Controller ManagementFactOfTheDayController.java. Added live-reload. https://mkyong.com/spring-boot/intellij-idea-spring-boot-template-reload-is-not-working/

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -64,3 +64,6 @@ spring.servlet.multipart.max-request-size=10MB
 server.tomcat.max-http-post-size=10MB
 # Time after a user last activity time to check if a user is online
 greencity.time.after.last.activity=300000
+
+#Thymeleaf
+spring.thymeleaf.cache=false
