--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -3,6 +3,7 @@ trigger:
   branches:
     include:
     - testage
+    - master
   paths:
     exclude:
     - README.md
@@ -24,6 +25,7 @@ variables:
   resourceGroup: GreenCity
   coreServiceName: testage
   mailServiceName: testage-mail
+  
 
 stages:
 - stage: Build
@@ -102,7 +104,8 @@ stages:
         artifactName: '$(artifactName)'
 
 
-- stage: Deploy
+- stage: DeployTEST
+  condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
   jobs:
     - deployment: DeployCore
       displayName: Deploy core app service
@@ -158,3 +161,58 @@ stages:
                 ResourceGroupName: '$(resourceGroup)'
                 packageForLinux: '$(System.ArtifactsDirectory)/$(artifactName)/$(mailRepoName)/target/$(onbootJarName)'
 
+- stage: DeployPROD
+  jobs:
+    - deployment: DeployCore
+      displayName: Deploy core app service
+      pool:
+        vmImage: $(agentOS)
+      environment: 'prod'
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+            - download: none
+            
+            - task: DownloadBuildArtifacts@0
+              inputs:
+                buildType: 'current'
+                downloadType: 'single'
+                artifactName: '$(artifactName)'
+                downloadPath: '$(System.ArtifactsDirectory)'
+                
+            - task: AzureRmWebAppDeployment@4
+              inputs:
+                azureSubscription: '$(azureSub)'
+                appType: 'webAppLinux'
+                WebAppName: '$(coreServiceName)'
+                deployToSlotOrASE: true
+                ResourceGroupName: '$(resourceGroup)'
+                packageForLinux: '$(System.ArtifactsDirectory)/$(artifactName)/$(coreRepoName)/target/$(onbootJarName)'
+
+    - deployment: DeployMail
+      displayName: Deploy mail app service
+      pool:
+        vmImage: $(agentOS)
+      environment: 'prod'
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+            - download: none
+            
+            - task: DownloadBuildArtifacts@0
+              inputs:
+                buildType: 'current'
+                downloadType: 'single'
+                artifactName: '$(artifactName)'
+                downloadPath: '$(System.ArtifactsDirectory)'
+                
+            - task: AzureRmWebAppDeployment@4
+              inputs:
+                azureSubscription: '$(azureSub)'
+                appType: 'webAppLinux'
+                WebAppName: '$(mailServiceName)'
+                deployToSlotOrASE: true
+                ResourceGroupName: '$(resourceGroup)'
+                packageForLinux: '$(System.ArtifactsDirectory)/$(artifactName)/$(mailRepoName)/target/$(onbootJarName)'
