--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -162,6 +162,7 @@ stages:
                 packageForLinux: '$(System.ArtifactsDirectory)/$(artifactName)/$(mailRepoName)/target/$(onbootJarName)'
 
 - stage: DeployPROD
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   jobs:
     - deployment: DeployCore
       displayName: Deploy core app service
