--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -111,12 +111,14 @@ stages:
           inputs:
             azureSubscription: '$(azureSub)'
             action: start Azure App Service
-            webAppName: '$(coreServiceName)'    
-        - task: AzureAppServiceManage@0
-          inputs:
-            azureSubscription: '$(azureSub)'
-            action: start Azure App Service
-            webAppName: '$(mailServiceName)'
+            webAppName: '$(coreServiceName)'
+            ResourceGroupName: '$(resourceGroup)'
+#        - task: AzureAppServiceManage@0
+#          inputs:
+#            azureSubscription: '$(azureSub)'
+#            action: start Azure App Service
+#            webAppName: '$(mailServiceName)'
+#            ResourceGroupName: '$(resourceGroup)'
 
 - stage: DeployTEST
   jobs:
