--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -110,7 +110,7 @@ stages:
         - task: AzureAppServiceManage@0
           inputs:
             azureSubscription: '$(azureSub)'
-            action: 'Start'
+            action: 'start Azure App Service'
             webAppName: '$(coreServiceName)'
             ResourceGroupName: '$(resourceGroup)'
 #        - task: AzureAppServiceManage@0
