--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -103,16 +103,16 @@ stages:
         PathtoPublish: '$(build.artifactstagingdirectory)'
         artifactName: '$(artifactName)'
 
-- stage: EnablingTestAppServices
-  jobs:
-    - job: Enabling
-      steps:
-        - task: AzureAppServiceManage@0
-          inputs:
-            azureSubscription: '$(azureSub)'
-            action: 'Start Azure App Service'
-            webAppName: '$(coreServiceName)'
-            ResourceGroupName: '$(resourceGroup)'
+#- stage: EnablingTestAppServices
+#  jobs:
+#    - job: Enabling
+#      steps:
+#        - task: AzureAppServiceManage@0
+#          inputs:
+#            azureSubscription: '$(azureSub)'
+#            action: 'Start Azure App Service'
+#            webAppName: '$(coreServiceName)'
+#            ResourceGroupName: '$(resourceGroup)'
 #        - task: AzureAppServiceManage@0
 #          inputs:
 #            azureSubscription: '$(azureSub)'
