--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@
   },
   "script": [
     "git fetch --unshallow",
-    "cat /home/travis/.sonarscanner/sonar-scanner-3.0.3.778/conf/sonar-scanner.properties",
-    "echo \"${SONAR_TOKEN}\""
+    "ls /home/travis/.sonarscanner/sonar-scanner-3.0.3.778/",
+    "echo \"$SONAR_TOKEN\""
   ],
   ".result": "configured",
   "language": "java"
