--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@
   },
   "script": [
     "git fetch --unshallow",
-    "ls /home/travis/.sonarscanner/sonar-scanner-3.0.3.778/",
-    "echo \"$SONAR_TOKEN\""
+    "ls /home/travis/.sonarscanner",
+    "printenv"
   ],
   ".result": "configured",
   "language": "java"
