--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@
   },
   "script": [
     "git fetch --unshallow",
-    "ls /home/travis/.sonarscanner",
+    "ls /home/travis/.sonarscanner/sonar-scanner",
     "printenv"
   ],
   ".result": "configured",
