--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@
   },
   "script": [
     "git fetch --unshallow",
-    "ls /home/travis/.sonarscanner/sonar-scanner",
-    "printenv"
+    "ls /home/travis/.sonarscanner/sonar-scanner/conf",
+    "travis encrypt 2a72608efaa6642741e501ae747abcf49835394d"
   ],
   ".result": "configured",
   "language": "java"
