--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@
   },
   "script": [
     "git fetch --unshallow",
-    "cat /home/travis/.sonarscanner/sonar-scanner/conf/sonar-scanner.properties"
+    "cat /home/travis/.sonarscanner/sonar-scanner/conf/sonar-scanner.properties",
+    "echo $SONAR_TOKEN"
   ],
   ".result": "configured",
   "language": "java"
