--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@
   },
   "script": [
     "git fetch --unshallow",
-    "cat /home/travis/.sonarscanner/sonar-scanner/conf/sonar-scanner.properties",
-    "echo $SONAR_TOKEN"
+    "mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dtest='greencity.service.impl.*Test' -Dsonar.projectKey=GreenCity -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=softserve-social-projects -Dsonar.sources='src/main/java/greencity/service' -Dsonar.tests='src/test/java/greencity/service/impl' -Dsonar.binaries=target/classes -Dsonar.dynamicAnalysis=reuseReports"
   ],
   ".result": "configured",
   "language": "java"
