--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@
 AlcYEQXH71/D5ztaISpMQ3jEI8k4kfLuQM69/OBPZJgaf3c6alJc9bmPgDdL6rGKdv3hb/QTb10JZJSr2/KBwkr9PCOBrbw8FMd5EOLsmN+ASPIJYTsCY7uMdHAz25Y+p0oe25hZoV1
 WNI+hbJesHpxtiXTh50MpamvA7e+O1vQjZ+5ORR5UwTx5Hq81jN0lF3adfvW6ZTuYWHCfaTysNN3tqJppS0w2eavebSwhRtu5EF+k5TxYgCnrO6pLB4FUjjI7d/oJgyLy2nOG9O9MSz
 VYXNIoXy2wlQD7bAdYWwO5u/wylSr+f6MAS1xkhTnD1XLcDYkUrKDAHHH6O1ib1HuEe32FAuc+hQG/CYbl07vCVA28ilSiomo+oYCrwWDeJ2bnnoN4Gn0Si9+DuJvPGma0hDcYjT3Dq
-tIIYxZKdCJ1r9/9bf00qj2SQ8C+ix2xZWT5TkAADJ10TjJ9UOO/8f9GyZInY812zrq4IWFtx8tiYfDhLsejW26REvVRddypDyHWqwpw3egpqEIgrM4GlBPYOZ2M/nGBuh8l/K6wuBY=
-"
+tIIYxZKdCJ1r9/9bf00qj2SQ8C+ix2xZWT5TkAADJ10TjJ9UOO/8f9GyZInY812zrq4IWFtx8tiYfDhLsejW26REvVRddypDyHWqwpw3egpqEIgrM4GlBPYOZ2M/nGBuh8l/K6wuBY="
       },
       "organization": "softserve-social-projects"
     }
