--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,9 @@
   ],
   "dist": "trusty",
   "group": "stable",
-  "addons": {
-    "sonarcloud": {
-      "token": {
-        "secure": "$SONAR_TOKEN"
-      },
-      "organization": "softserve-social-projects"
-    }
-  },
   "script": [
     "git fetch --unshallow",
-    "mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dtest='greencity.service.impl.*Test' -Dsonar.login=$SONAR_TOKEN -Dsonar.projectKey=GreenCity -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=ita-social-projects -Dsonar.sources='src/main/java/greencity/service' -Dsonar.tests='src/test/java/greencity/service/impl' -Dsonar.binaries=target/classes -Dsonar.dynamicAnalysis=reuseReports"
+    "mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dtest='greencity.service.impl.*Test' -Dsonar.projectKey=ita-social-projects-green-city -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=ita-social-projects -Dsonar.sources='src/main/java/greencity/service' -Dsonar.tests='src/test/java/greencity/service/impl' -Dsonar.binaries=target/classes -Dsonar.dynamicAnalysis=reuseReports"
   ],
   ".result": "configured",
   "language": "java"
