--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@
   "addons": {
     "sonarcloud": {
       "organization": "ita-social-projects",
-      "key": "ita-social-projects-green-city"
+      "project-key": "ita-social-projects-green-city"
     }
   },
   "script": [
