--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <packaging>pom</packaging>
 
     <properties>
+        <java.version>11</java.version>
         <checkstyle-maven-plugin.version>3.1.0</checkstyle-maven-plugin.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
