Update az-cd-pipeline.yml for Azure Pipelines

--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -23,7 +23,7 @@ variables:
   
   azureSub: GreenCity
   resourceGroup: GreenCity
-  coreServiceName: testage
+  coreServiceName: greencity
   mailServiceName: greencity-mail
 
 stages:
