--- a/core/pom.xml
+++ b/core/pom.xml
@@ -229,6 +229,11 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>1.49</version>
+        </dependency>
     </dependencies>
 
     <build>
