--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -67,3 +67,6 @@ greencity.time.after.last.activity=300000
 
 #Thymeleaf
 spring.thymeleaf.cache=false
+
+#Scheduled delete rating statistics interval
+period=P2Y
