Added H2 database and configured for testing. fixed issue with HabitStatisticRepo.

--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -1,8 +1,8 @@
 # Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driverClassName=org.h2.Driver
 server.port=0
 # Liquibase
 spring.liquibase.url=jdbc:postgresql://localhost:5432/test
@@ -11,10 +11,10 @@ spring.liquibase.password=${DATASOURCE_PASSWORD}
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 # Hibernate
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Mail sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
