--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -5,9 +5,9 @@ spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
 server.port=0
 # Liquibase
-spring.liquibase.url=jdbc:postgresql://localhost:5432/test
-spring.liquibase.user=${DATASOURCE_USER}
-spring.liquibase.password=${DATASOURCE_PASSWORD}
+#spring.liquibase.url=jdbc:postgresql://localhost:5432/test
+#spring.liquibase.user=${DATASOURCE_USER}
+#spring.liquibase.password=${DATASOURCE_PASSWORD}
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 # Hibernate
