Resolved H2 and Postgresql conflicts. Added repository to test.

--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -11,7 +11,7 @@ server.port=0
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 # Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
